--- a/src/App.css
+++ b/src/App.css
@@ -275,6 +275,8 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    touch-action: pan-x;
+    -webkit-overflow-scrolling: touch;
 }
 
 .scroll-wrapper:active {
@@ -333,7 +335,11 @@
     position: relative;
     margin: 0 auto;
     cursor: pointer;
-    pointer-events: none;
+}
+
+.map-card:active {
+    cursor: grabbing;
+    transition-delay: 0.1s;
 }
 
 .map-card.active {
@@ -349,7 +355,6 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    pointer-events: none;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -408,6 +413,11 @@
 
     .scroll-wrapper {
         padding: 10px 40px;
+        cursor: default;
+    }
+
+    .scroll-wrapper:active {
+        cursor: default;
     }
 
     .map-card {
